sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:13: error: not found: value plusGrand
			if(!plusGrand(k+1,k)){
                            ^AlgCocktailSort1:14: error: not found: value k
				echange(k,k+1)
                                        ^